[tool.poetry]
name = "balance_domain"
version = "0.1.2"
description = ""
authors = ["Calenzo <calenzodevs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
