[tool.poetry]
name = "balance_domain"
version = "0.1.3"
description = "H, hello!"
long_description = file: README.md
long_description_content_type = text/markdown
authors = ["Calenzo <calenzodevs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
